# HiveMem

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Dockerfile  Dockerfile.base  Dockerfile.db  Dockerfile.testdb  LICENSE  LICENSING.md  README.md  RELEASE_NOTES_3.1.0.md  RELEASE_NOTES_6.0.1.md  RELEASE_NOTES_6.1.0.md  RELEASE_NOTES_6.2.0.md  RELEASE_NOTES_6.3.0.md  RELEASE_NOTES_6.4.0.md  RELEASE_NOTES_7.0.0.md  RELEASE_NOTES_7.1.0.md  RELEASE_NOTES_7.1.1.md  RELEASE_NOTES_7.2.0.md  RELEASE_NOTES_8.1.0.md  RELEASE_NOTES_9.0.0.md  SAFE.md  SECURITY.md  deploy.sh  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  safeskill.manifest.json
.github/: dependabot.yml
caddy/: Caddyfile
documentation/: README.md  architecture.md  auth.md  backup.md  extraction.md  getting-started.md  kroki-vision.md  oauth.md  ocr.md  operations.md  roadmap.md  structure.md  summarizer.md  tools.md  vision.md
embedding-service/: .gitignore  Dockerfile  app.py  app_onnx.py  download_model.py  test_app_onnx.py
hivemem/: __init__.py  db.py  embeddings.py  models.py  recompute_embeddings.py  schema.sql  security.py  server.py
java-server/: .dockerignore  Dockerfile  pom.xml
knowledge-ui/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
memory-palace/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
migrations/: 0001_initial.sql  0002_edges_v2.sql  0003_building_metaphor.sql
scripts/: backup.sh  connect-peers.sh  (+5 more)
(+507 files in other folders)
