[project]
name = "hivemem"
version = "0.1.0"
description = "Personal knowledge system — MCP server with PostgreSQL"
license = "MIT"
readme = "README.md"
authors = [{name = "Viktor Ufelmann"}]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "FlagEmbedding>=1.3",
    "transformers>=4.45,<5",
    "pydantic>=2.0",
    "yoyo-migrations>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.0",
]

[project.urls]
Homepage = "https://github.com/ufelmann/HiveMem"
Repository = "https://github.com/ufelmann/HiveMem"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
